# bellbot

./: .env.sample  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  TODO.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
.github/workflows/: pylint.yml
bot/: __main__.py
bot/cogs/: call.py  general.py
bot/ext/resources/: bot.py
bot/ext/utils/: logger.py  stable_diffusion.py
tests/: test_smoketest.py
