[tool.poetry]
name = "bellbot"
version = "1.0.0"
description = "An open-source bot written in Python"
authors = ["SwiftNathalie <tiomaicom12@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.0.1"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pylint = "^2.17.4"
coverage = "^7.2.7"
black = "^23.3.0"
autopep8 = "^2.0.2"
isort = "^5.12.0"
pytest-asyncio = "^0.21.0"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
norecursedirs = [
  "venv",
  ".venv",
  ".git"
]

[tool.poetry.scripts]
test = "pytest"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
